# pycourse

./: README.md  pyproject.toml
examples/: demo.ipynb  final_grades.csv  output.csv  test_gradebook.csv
examples/.ipynb_checkpoints/: demo-checkpoint.ipynb  final_grades-checkpoint.csv  test_gradebook-checkpoint.csv
pycourse/: __init__.py  accomodations.py  assessments.py  courses.py  outputs.py  schemes.py
pycourse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: demo.ipynb  demo.py  test_accomodations.py  test_calc_grades.py  test_optimize.py  test_output.csv  test_outputs.py
