[project]
name = "pycourse"
version = "0.0.1"
authors = [
  { name="Jeremy Webb", email="webbjj@yorku.ca" },
]
description = "A python package for managing and analysing course assessments"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
